# computational-biology

./: .gitattributes  .gitignore  CLAUDE.md  CompBio_Audit_SOP_Drills_Resources.md  CompBio_PhD_Tracker_Vinoth.xlsx  ENVIRONMENT.md  LICENSE  Learning_Progress.md  README.md  requirements.txt
.claude/: settings.json
curriculum/00_orientation/: README.md  papers.md  references.md  roadmap.md
curriculum/01_python_scientific_computing/: README.md  papers.md  references.md  roadmap.md
curriculum/02_mathematics_for_biology/: README.md  papers.md  references.md  roadmap.md
curriculum/03_statistics_and_probability/: README.md  papers.md  references.md  roadmap.md
curriculum/04_linear_algebra/: README.md  papers.md  references.md  roadmap.md
curriculum/05_biology_fundamentals/: README.md  papers.md  references.md  roadmap.md
curriculum/06_genetics_and_evolution/: README.md  papers.md  references.md  roadmap.md
curriculum/07_biochemistry_and_molecular_biology/: README.md  papers.md  references.md  roadmap.md
curriculum/08_bioinformatics_sequence_analysis/: README.md  papers.md  references.md  roadmap.md
curriculum/09_genomics_and_ngs/: README.md  papers.md  references.md  roadmap.md
curriculum/10_transcriptomics_and_proteomics/: README.md  papers.md  references.md  roadmap.md
curriculum/11_structural_biology/: README.md  papers.md  references.md  roadmap.md
portfolio/: literature_review_draft.md  sop_huber.md  sop_stegle.md  sop_theis.md
tests/: test_compbio_utils.py
utilities/: pyproject.toml
utilities/compbio_utils/: __init__.py  sequences.py
(+412 files in other folders)
