[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "compbio_utils"
version = "0.1.0-dev"
description = "Shared, tested Python utility library for the computational-biology research notebook program"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

[tool.setuptools]
packages = ["compbio_utils"]
